[gd_scene load_steps=9 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Textures/Interface/Title.png" type="Texture" id=2]
[ext_resource path="res://Scenes/TitleScreen/QuitLabel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/TitleScreen/PlayLabel.gd" type="Script" id=4]
[ext_resource path="res://Scenes/TitleScreen/OptionsLabel.gd" type="Script" id=5]
[ext_resource path="res://Scenes/TitleScreen/TitleScreen.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Fade Out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TitleTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, -6 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, -6 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OptionsLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, -6 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("QuitLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, -6 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("TitleTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 6, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3.5 ),
"transitions": PoolRealArray( 6, 6, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OptionsLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 6, 6, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("QuitLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 4.5 ),
"transitions": PoolRealArray( 6, 6, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 184.33 ]
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade Out" = SubResource( 1 )
anims/Load = SubResource( 2 )

[node name="TitleTexture" type="TextureRect" parent="."]
margin_left = 87.7399
margin_top = 38.7296
margin_right = 288.74
margin_bottom = 91.7296
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayLabel" type="Label" parent="."]
margin_left = 167.0
margin_top = 123.0
margin_right = 203.0
margin_bottom = 136.0
mouse_filter = 0
theme = ExtResource( 1 )
text = "New Game"
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="."]
margin_left = 171.555
margin_top = 138.0
margin_right = 196.555
margin_bottom = 151.0
mouse_filter = 0
theme = ExtResource( 1 )
text = "Options"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitLabel" type="Label" parent="."]
margin_left = 176.0
margin_top = 153.0
margin_right = 191.0
margin_bottom = 166.0
mouse_filter = 0
theme = ExtResource( 1 )
text = "Quit"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="PlayLabel" method="_on_AnimationPlayer_animation_finished"]
[connection signal="gui_input" from="PlayLabel" to="PlayLabel" method="_on_PlayLabel_gui_input"]
[connection signal="mouse_entered" from="PlayLabel" to="PlayLabel" method="_on_PlayLabel_mouse_entered"]
[connection signal="mouse_exited" from="PlayLabel" to="PlayLabel" method="_on_PlayLabel_mouse_exited"]
[connection signal="gui_input" from="OptionsLabel" to="OptionsLabel" method="_on_OptionsLabel_gui_input"]
[connection signal="mouse_entered" from="OptionsLabel" to="OptionsLabel" method="_on_OptionsLabel_mouse_entered"]
[connection signal="mouse_exited" from="OptionsLabel" to="OptionsLabel" method="_on_OptionsLabel_mouse_exited"]
[connection signal="gui_input" from="QuitLabel" to="QuitLabel" method="_on_QuitLabel_gui_input"]
[connection signal="mouse_entered" from="QuitLabel" to="QuitLabel" method="_on_QuitLabel_mouse_entered"]
[connection signal="mouse_exited" from="QuitLabel" to="QuitLabel" method="_on_QuitLabel_mouse_exited"]
